--- a/second/index.css
+++ b/second/index.css
@@ -14,21 +14,21 @@ body {
   .square-one {
     height: 150px;
     width: 50px;
-    background-color: blueviolet;
+    background-color: purple;
     display: inline-block;
   }
   .square-two {
     height: 200px;
     width: 400px;
     display: inline-block;
-    background-color: forestgreen;
+    background-color: green;
     margin: 0 50px;
   }
   .circle-one {
     height: 200px;
     width: 200px;
     border-radius: 50%;
-    background-color: skyblue;
+    background-color: lightblue;
     display: inline-block;
   }
   
@@ -43,7 +43,7 @@ body {
   .box-shadow {
     width: 100%;
     height: 200px;
-    background-color: lemonchiffon;
+    background-color: lightyellow;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
