Wording white box done

--- a/third/index.css
+++ b/third/index.css
@@ -10,3 +10,12 @@
     margin: 0px 0px 0px 8px; 
 
 }
+.white-stripe {
+    background-color: white;
+    height: 70px;
+    margin: 50px;
+    font-family: arial;
+    font-size: 16pt;
+
+
+}
