--- a/third/index.css
+++ b/third/index.css
@@ -1,19 +1,49 @@
 .gray {
     background-color: rgb(209, 204, 204);
-    height: 50px;
+    height: 65px;
     padding: 10px;
 }
 .blue-square {
-    background-color: blue;
-    height: 50px;
-    width: 50px;
+    background-color: rgb(86, 102, 249);
+    height: 60px;
+    width: 60px;
     margin: 0px 0px 0px 8px; 
 
 }
 .white-stripe {
     background-color: white;
-    height: 70px;
+    height: 130px;
     margin: 50px;
+    font-family: arial;
+    font-size: 16pt;
+
+
+}
+.blue-stripe {
+    background-color:  rgb(86, 102, 249);
+    height: 100px;
+    font-family: arial;
+    font-size: 16pt;
+
+
+}
+.green-stripe {
+    background-color: rgb(150, 244, 218);
+    height: 100px;
+    font-family: arial;
+    font-size: 16pt;
+}
+.lime-green-stripe {
+    background-color: lime;
+    height: 100px;
+    font-family: arial;
+    font-size: 16pt;
+
+
+}
+.yellow-stripe {
+    background-color: yellow;
+    height: 100px;
     font-family: arial;
     font-size: 16pt;
 
