Maybe this is it?

--- a/third/index.css
+++ b/third/index.css
@@ -23,6 +23,7 @@
     background-color:  rgb(86, 102, 249);
     height: 100px;
     font-family: arial;
+    margin: 1 px;
     font-size: 16pt;
 
 
